salesforce/force-app/main/default/objects/Provider_Credential__c/Provider_Credential__c.object-meta.xml
<CustomObject>
    <description>Credentialing POC — Provider Credential</description>
    <label>Provider Credential</label>
    <pluralLabel>Provider Credentials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <displayFormat>PC-{00000}</displayFormat>
        <label>Provider Credential Name</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>