salesforce/force-app/main/default/objects/Provider_Credential__c/fields/Credential_Number__c.field-meta.xml
<CustomField>
    <fullName>Credential_Number__c</fullName>
    <description></description>
    <label>Credential Number</label>
    <length>80</length>
    <type>Text</type>
</CustomField>