salesforce/force-app/main/default/objects/Provider_Credential__c/fields/Credential_Type__c.field-meta.xml
<CustomField>
    <fullName>Credential_Type__c</fullName>
    <description></description>
    <label>Credential Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Medical_License</fullName>
            <label>Medical License</label>
        </value>
        <value>
            <fullName>DEA</fullName>
        </value>
        <value>
            <fullName>Board_Certification</fullName>
            <label>Board Certification</label>
        </value>
        <value>
            <fullName>Malpractice_Insurance</fullName>
            <label>Malpractice Insurance</label>
        </value>
        <value>
            <fullName>Facility_License</fullName>
            <label>Facility License</label>
        </value>
        <value>
            <fullName>Accreditation</fullName>
        </value>
        <value>
            <fullName>CLIA</fullName>
        </value>
        <value>
            <fullName>CME</fullName>
        </value>
        <value>
            <fullName>Other</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>