salesforce/force-app/main/default/objects/Provider_Credential__c/fields/Issuing_Authority__c.field-meta.xml
<CustomField>
    <fullName>Issuing_Authority__c</fullName>
    <description></description>
    <label>Issuing Authority</label>
    <length>120</length>
    <type>Text</type>
</CustomField>