salesforce/force-app/main/default/objects/Provider_Credential__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description></description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Valid</fullName>
        </value>
        <value>
            <fullName>Expiring_Soon</fullName>
            <label>Expiring Soon</label>
        </value>
        <value>
            <fullName>Expired</fullName>
        </value>
        <value>
            <fullName>Pending_Verification</fullName>
            <label>Pending Verification</label>
        </value>
        <value>
            <fullName>Rejected</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>